[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/scripts/levels/8Hold.gd" type="Script" id=1]
[ext_resource path="res://scenes/env/Pause.tscn" type="PackedScene" id=2]
[ext_resource path="res://audio/8Hold.ogg" type="AudioStream" id=3]
[ext_resource path="res://scenes/env/DeathScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/backgrounds/BackgroundThirdAct.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/env/Finish.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/env/HoloWall.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/env/TileMap.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/env/WallLamp.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Mirza.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/enemies/Cannon.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/env/Dialogue_node.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/env/Button.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/enemies/Boulder.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/env/KoumissBottle.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/enemies/ToothDwarf.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/enemies/HipptyHop.tscn" type="PackedScene" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 77.9181, 49.266 )

[node name="8Hold" type="Node2D"]
script = ExtResource( 1 )

[node name="Pause" parent="." instance=ExtResource( 2 )]

[node name="Music" type="AudioStreamPlayer" parent="Pause"]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"

[node name="DeathScreen" parent="." instance=ExtResource( 4 )]

[node name="BackgroundThirdAct" parent="." instance=ExtResource( 5 )]
editor/display_folded = true

[node name="background_3act" parent="BackgroundThirdAct/ParallaxBackground/ParallaxLayer" index="0"]
position = Vector2( -323.596, -4563.32 )

[node name="Finish" parent="." instance=ExtResource( 6 )]
position = Vector2( 2565.46, 2312.85 )
next_level = "9Duel"
number_of_level = 8

[node name="HoloWall1" parent="." instance=ExtResource( 7 )]
position = Vector2( 94.8048, -816.125 )
rotation = 1.5708

[node name="HoloWall2" parent="." instance=ExtResource( 7 )]
position = Vector2( 1044.91, 2229.9 )
rotation = 1.5708

[node name="TileMap" parent="." instance=ExtResource( 8 )]
editor/display_folded = true
tile_data = PoolIntArray( -1441795, 20, 0, -1441794, 20, 0, -1441793, 20, 0, -1507328, 20, 0, -1507327, 20, 0, -1507326, 20, 0, -1507325, 20, 0, -1507324, 20, 0, -1507323, 20, 0, -1507322, 20, 0, -1507321, 20, 0, -1507320, 20, 0, -1507319, 20, 0, -1507318, 20, 0, -1507317, 20, 0, -1507316, 20, 0, -1507315, 20, 0, -1507314, 20, 0, -1507313, 20, 0, -1507312, 20, 0, -1507311, 20, 0, -1507310, 20, 0, -1507309, 20, 0, -1507308, 20, 0, -1507307, 20, 0, -1507306, 20, 0, -1507305, 20, 0, -1507304, 20, 0, -1507303, 20, 0, -1507302, 20, 0, -1507301, 20, 0, -1507300, 20, 0, -1507299, 20, 0, -1507298, 20, 0, -1507297, 20, 0, -1507296, 20, 0, -1507295, 20, 0, -1376259, 20, 0, -1441762, 20, 0, -1441761, 20, 0, -1441760, 20, 0, -1441759, 20, 0, -1310723, 20, 0, -1376226, 20, 0, -1376225, 20, 0, -1376224, 20, 0, -1376223, 20, 0, -1245187, 20, 0, -1310690, 20, 0, -1310689, 20, 0, -1310688, 20, 0, -1310687, 20, 0, -1179651, 20, 0, -1245154, 20, 0, -1245153, 20, 0, -1245152, 20, 0, -1245151, 20, 0, -1114115, 20, 0, -1179618, 20, 0, -1179617, 20, 0, -1179616, 20, 0, -1179615, 20, 0, -1048579, 20, 0, -1114082, 20, 0, -1114081, 20, 0, -1114080, 20, 0, -1114079, 20, 0, -983043, 20, 0, -1048546, 20, 0, -1048545, 20, 0, -1048544, 20, 0, -1048543, 20, 0, -917507, 20, 0, -983010, 20, 0, -983009, 20, 0, -983008, 20, 0, -983007, 20, 0, -851971, 20, 0, -917474, 20, 0, -917473, 20, 0, -917472, 20, 0, -917471, 20, 0, -786435, 20, 0, -851938, 20, 0, -851937, 20, 0, -851936, 20, 0, -851935, 20, 0, -720899, 20, 0, -786402, 20, 0, -786401, 20, 0, -786400, 20, 0, -786399, 20, 0, -655363, 20, 0, -720866, 20, 0, -720865, 20, 0, -720864, 20, 0, -720863, 20, 0, -589827, 20, 0, -655330, 20, 0, -655329, 20, 0, -655328, 20, 0, -655327, 20, 0, -524291, 20, 0, -589794, 20, 0, -589793, 20, 0, -589792, 20, 0, -589791, 20, 0, -458755, 20, 0, -524258, 20, 0, -524257, 20, 0, -524256, 20, 0, -524255, 20, 0, -393219, 20, 0, -458722, 20, 0, -458721, 20, 0, -458720, 20, 0, -458719, 20, 0, -327683, 20, 0, -393186, 20, 0, -393185, 20, 0, -393184, 20, 0, -393183, 20, 0, -262147, 20, 0, -327650, 20, 0, -327649, 20, 0, -327648, 20, 0, -327647, 20, 0, -196611, 20, 0, -262114, 20, 0, -262113, 20, 0, -262112, 20, 0, -262111, 20, 0, -131075, 20, 0, -196578, 20, 0, -196577, 20, 0, -196576, 20, 0, -196575, 20, 0, -65539, 20, 0, -131042, 20, 0, -131041, 20, 0, -131040, 20, 0, -131039, 20, 0, -3, 20, 0, -65506, 20, 0, -65505, 20, 0, -65504, 20, 0, -65503, 20, 0, 65533, 20, 0, 65534, 16, 0, 65535, 17, 0, 30, 20, 0, 31, 20, 0, 32, 20, 0, 33, 20, 0, 131069, 20, 0, 131070, 20, 0, 131071, 21, 0, 65536, 17, 0, 65566, 20, 0, 65567, 20, 0, 65568, 20, 0, 65569, 20, 0, 196605, 20, 0, 196606, 20, 0, 196607, 20, 0, 131072, 21, 0, 131073, 17, 0, 131102, 20, 0, 131103, 20, 0, 131104, 20, 0, 131105, 20, 0, 262141, 20, 0, 262142, 20, 0, 262143, 20, 0, 196608, 20, 0, 196609, 21, 0, 196610, 17, 0, 196638, 20, 0, 196639, 20, 0, 196640, 20, 0, 196641, 20, 0, 327677, 20, 0, 327678, 20, 0, 327679, 20, 0, 262144, 20, 0, 262145, 20, 0, 262146, 21, 0, 262147, 17, 0, 262174, 20, 0, 262175, 20, 0, 262176, 20, 0, 262177, 20, 0, 393213, 20, 0, 393214, 20, 0, 393215, 20, 0, 327680, 20, 0, 327681, 20, 0, 327682, 20, 0, 327683, 21, 0, 327684, 17, 0, 327710, 20, 0, 327711, 20, 0, 327712, 20, 0, 327713, 20, 0, 458749, 20, 0, 458750, 20, 0, 458751, 20, 0, 393216, 20, 0, 393217, 20, 0, 393218, 20, 0, 393219, 20, 0, 393220, 21, 0, 393221, 17, 0, 393246, 20, 0, 393247, 20, 0, 393248, 20, 0, 393249, 20, 0, 524285, 20, 0, 524286, 20, 0, 524287, 20, 0, 458752, 20, 0, 458753, 20, 0, 458754, 20, 0, 458755, 20, 0, 458756, 20, 0, 458757, 21, 0, 458758, 17, 0, 458782, 20, 0, 458783, 20, 0, 458784, 20, 0, 458785, 20, 0, 589821, 20, 0, 589822, 20, 0, 589823, 20, 0, 524288, 20, 0, 524289, 20, 0, 524290, 20, 0, 524291, 20, 0, 524292, 20, 0, 524293, 20, 0, 524294, 21, 0, 524295, 17, 0, 524303, 26, 0, 524304, 15, 0, 524305, 15, 0, 524306, 15, 0, 524307, 15, 0, 524308, 15, 0, 524309, 25, 0, 524318, 20, 0, 524319, 20, 0, 524320, 20, 0, 524321, 20, 0, 655356, 20, 0, 655357, 20, 0, 655358, 20, 0, 655359, 20, 0, 589824, 20, 0, 589825, 20, 0, 589826, 20, 0, 589827, 20, 0, 589828, 20, 0, 589829, 20, 0, 589830, 20, 0, 589831, 23, 0, 589832, 15, 0, 589833, 15, 0, 589834, 15, 0, 589835, 15, 0, 589836, 15, 0, 589837, 15, 0, 589838, 15, 0, 589839, 20, 0, 589840, 20, 0, 589841, 20, 0, 589842, 20, 0, 589843, 20, 0, 589844, 20, 0, 589845, 20, 0, 589854, 20, 0, 589855, 20, 0, 589856, 20, 0, 589857, 20, 0, 720892, 20, 0, 720893, 20, 0, 720894, 20, 0, 720895, 20, 0, 655360, 20, 0, 655361, 20, 0, 655362, 20, 0, 655363, 20, 0, 655364, 20, 0, 655365, 20, 0, 655366, 20, 0, 655367, 20, 0, 655368, 20, 0, 655369, 20, 0, 655370, 20, 0, 655371, 20, 0, 655372, 20, 0, 655373, 20, 0, 655374, 20, 0, 655375, 20, 0, 655376, 20, 0, 655377, 20, 0, 655378, 20, 0, 655379, 20, 0, 655380, 20, 0, 655390, 20, 0, 655391, 20, 0, 655392, 20, 0, 655393, 20, 0, 786427, 20, 0, 786428, 20, 0, 786429, 20, 0, 786430, 20, 0, 786431, 20, 0, 720896, 20, 0, 720897, 20, 0, 720898, 20, 0, 720899, 20, 0, 720900, 20, 0, 720901, 20, 0, 720902, 20, 0, 720903, 20, 0, 720904, 20, 0, 720905, 20, 0, 720906, 20, 0, 720907, 20, 0, 720908, 20, 0, 720909, 20, 0, 720910, 20, 0, 720911, 20, 0, 720912, 20, 0, 720926, 20, 0, 720927, 20, 0, 720928, 20, 0, 720929, 20, 0, 851963, 20, 0, 851964, 20, 0, 851965, 20, 0, 851966, 20, 0, 851967, 20, 0, 786432, 20, 0, 786433, 20, 0, 786434, 20, 0, 786435, 20, 0, 786436, 20, 0, 786437, 20, 0, 786438, 20, 0, 786439, 20, 0, 786440, 20, 0, 786441, 20, 0, 786442, 20, 0, 786443, 20, 0, 786444, 20, 0, 786462, 20, 0, 786463, 20, 0, 786464, 20, 0, 786465, 20, 0, 917499, 20, 0, 917500, 20, 0, 917501, 20, 0, 917502, 20, 0, 851997, 18, 0, 851998, 20, 0, 851999, 20, 0, 852000, 20, 0, 852001, 20, 0, 983035, 20, 0, 983036, 20, 0, 983037, 20, 0, 917532, 18, 0, 917533, 22, 0, 917534, 20, 0, 917535, 20, 0, 917536, 20, 0, 917537, 20, 0, 1048571, 20, 0, 1048572, 20, 0, 983067, 18, 0, 983068, 22, 0, 983069, 20, 0, 983070, 20, 0, 983071, 20, 0, 983072, 20, 0, 983073, 20, 0, 1114107, 20, 0, 1048602, 18, 0, 1048603, 22, 0, 1048604, 20, 0, 1048605, 20, 0, 1048606, 20, 0, 1048607, 20, 0, 1048608, 20, 0, 1048609, 20, 0, 1179643, 20, 0, 1114137, 18, 0, 1114138, 22, 0, 1114139, 20, 0, 1114140, 20, 0, 1114141, 20, 0, 1114142, 20, 0, 1114143, 20, 0, 1114144, 20, 0, 1114145, 20, 0, 1245179, 20, 0, 1179672, 18, 0, 1179673, 22, 0, 1179674, 20, 0, 1179675, 20, 0, 1179676, 20, 0, 1179677, 20, 0, 1179678, 20, 0, 1179679, 20, 0, 1179680, 20, 0, 1179681, 20, 0, 1310715, 20, 0, 1245207, 18, 0, 1245208, 22, 0, 1245209, 20, 0, 1245210, 20, 0, 1245211, 20, 0, 1245212, 20, 0, 1245213, 20, 0, 1245214, 20, 0, 1245215, 20, 0, 1245216, 20, 0, 1245217, 20, 0, 1376251, 20, 0, 1310742, 18, 0, 1310743, 22, 0, 1310744, 20, 0, 1310745, 20, 0, 1310746, 20, 0, 1310747, 20, 0, 1310748, 20, 0, 1310749, 20, 0, 1310750, 20, 0, 1310751, 20, 0, 1310752, 20, 0, 1310753, 20, 0, 1441787, 20, 0, 1376277, 18, 0, 1376278, 22, 0, 1376279, 20, 0, 1376280, 20, 0, 1376281, 20, 0, 1376282, 20, 0, 1376283, 20, 0, 1376284, 20, 0, 1376285, 20, 0, 1376286, 20, 0, 1376287, 20, 0, 1376288, 20, 0, 1376289, 20, 0, 1507323, 20, 0, 1441803, 26, 0, 1441804, 15, 0, 1441805, 15, 0, 1441806, 15, 0, 1441807, 15, 0, 1441808, 15, 0, 1441809, 15, 0, 1441810, 15, 0, 1441811, 15, 0, 1441812, 15, 0, 1441813, 24, 0, 1441814, 20, 0, 1441815, 20, 0, 1441816, 20, 0, 1441817, 20, 0, 1441818, 20, 0, 1441819, 20, 0, 1441820, 20, 0, 1441821, 20, 0, 1441822, 20, 0, 1441823, 20, 0, 1441824, 20, 0, 1441825, 20, 0, 1572859, 20, 0, 1507333, 15, 0, 1507334, 15, 0, 1507335, 15, 0, 1507336, 15, 0, 1507337, 15, 0, 1507338, 15, 0, 1507339, 20, 0, 1507340, 20, 0, 1507341, 20, 0, 1507342, 20, 0, 1507343, 20, 0, 1507344, 20, 0, 1507345, 20, 0, 1507346, 20, 0, 1507347, 20, 0, 1507348, 20, 0, 1507349, 20, 0, 1507350, 20, 0, 1507351, 20, 0, 1507352, 20, 0, 1507353, 20, 0, 1507354, 20, 0, 1507355, 20, 0, 1507356, 20, 0, 1507357, 20, 0, 1507358, 20, 0, 1507359, 20, 0, 1507360, 20, 0, 1507361, 20, 0, 1638395, 20, 0, 1572894, 20, 0, 1572895, 20, 0, 1572896, 20, 0, 1572897, 20, 0, 1703931, 20, 0, 1638431, 20, 0, 1638432, 20, 0, 1638433, 20, 0, 1769467, 20, 0, 1703968, 20, 0, 1703969, 20, 0, 1835003, 20, 0, 1835004, 17, 0, 1769505, 20, 0, 1900539, 20, 0, 1900540, 21, 0, 1900541, 17, 0, 1835041, 20, 0, 1966075, 20, 0, 1966076, 20, 0, 1966077, 21, 0, 1966078, 17, 0, 1900577, 20, 0, 2031611, 20, 0, 2031612, 20, 0, 2031613, 20, 0, 2031614, 21, 0, 2031615, 17, 0, 1966113, 20, 0, 2097147, 20, 0, 2097148, 20, 0, 2097149, 20, 0, 2097150, 20, 0, 2097151, 21, 0, 2031616, 17, 0, 2031649, 20, 0, 2162683, 20, 0, 2162684, 20, 0, 2162685, 20, 0, 2162686, 20, 0, 2162687, 20, 0, 2097152, 21, 0, 2097153, 17, 0, 2097185, 20, 0, 2228219, 20, 0, 2228220, 20, 0, 2228221, 20, 0, 2228222, 20, 0, 2228223, 20, 0, 2162688, 20, 0, 2162689, 21, 0, 2162690, 17, 0, 2162721, 20, 0, 2293755, 20, 0, 2293756, 20, 0, 2293757, 20, 0, 2293758, 20, 0, 2293759, 20, 0, 2228224, 20, 0, 2228225, 20, 0, 2228226, 23, 0, 2228227, 15, 0, 2228228, 15, 0, 2228229, 15, 0, 2228230, 15, 0, 2228231, 15, 0, 2228232, 15, 0, 2228233, 15, 0, 2228234, 15, 0, 2228235, 15, 0, 2228236, 15, 0, 2228237, 15, 0, 2228238, 15, 0, 2228239, 25, 0, 2228241, 26, 0, 2228242, 15, 0, 2228243, 15, 0, 2228244, 15, 0, 2228245, 15, 0, 2228246, 15, 0, 2228247, 15, 0, 2228248, 15, 0, 2228249, 15, 0, 2228250, 15, 0, 2228251, 15, 0, 2228252, 15, 0, 2228253, 15, 0, 2228254, 15, 0, 2228255, 15, 0, 2228256, 15, 0, 2228257, 20, 0, 2228258, 20, 0, 2228259, 20, 0, 2228260, 20, 0, 2228261, 20, 0, 2228262, 20, 0, 2228267, 20, 0, 2228268, 20, 0, 2228269, 20, 0, 2228270, 20, 0, 2228271, 20, 0, 2228272, 20, 0, 2228273, 20, 0, 2359291, 20, 0, 2293770, 20, 0, 2293781, 20, 0, 2293803, 20, 0, 2293804, 20, 0, 2293805, 20, 0, 2293806, 20, 0, 2293807, 20, 0, 2293808, 20, 0, 2293809, 20, 0, 2424827, 20, 0, 2359339, 20, 0, 2359340, 20, 0, 2359341, 20, 0, 2359342, 20, 0, 2359343, 20, 0, 2359344, 20, 0, 2359345, 20, 0, 2490364, 20, 0, 2424875, 20, 0, 2424876, 20, 0, 2424877, 20, 0, 2424878, 20, 0, 2424879, 20, 0, 2424880, 20, 0, 2424881, 20, 0, 2555901, 20, 0, 2490411, 20, 0, 2490412, 20, 0, 2490413, 20, 0, 2490414, 20, 0, 2490415, 20, 0, 2490416, 20, 0, 2490417, 20, 0, 2621438, 20, 0, 2555947, 20, 0, 2555948, 20, 0, 2555949, 20, 0, 2555950, 20, 0, 2555951, 20, 0, 2555952, 20, 0, 2555953, 20, 0, 2686975, 20, 0, 2621440, 20, 0, 2621483, 20, 0, 2621484, 20, 0, 2621485, 20, 0, 2621486, 20, 0, 2621487, 20, 0, 2621488, 20, 0, 2621489, 20, 0, 2686977, 20, 0, 2686978, 20, 0, 2687019, 20, 0, 2687020, 20, 0, 2687021, 20, 0, 2687022, 20, 0, 2687023, 20, 0, 2687024, 20, 0, 2687025, 20, 0, 2752515, 20, 0, 2752516, 20, 0, 2752517, 20, 0, 2752518, 20, 0, 2752544, 20, 0, 2752555, 20, 0, 2752556, 20, 0, 2752557, 20, 0, 2752558, 20, 0, 2752559, 20, 0, 2752560, 20, 0, 2752561, 20, 0, 2818055, 15, 0, 2818056, 15, 0, 2818057, 15, 0, 2818058, 15, 0, 2818059, 15, 0, 2818060, 15, 0, 2818061, 15, 0, 2818062, 15, 0, 2818063, 15, 0, 2818064, 15, 0, 2818065, 15, 0, 2818066, 15, 0, 2818067, 15, 0, 2818068, 15, 0, 2818069, 15, 0, 2818070, 15, 0, 2818071, 25, 0, 2818075, 26, 0, 2818076, 25, 0, 2818080, 20, 0, 2818081, 15, 0, 2818082, 15, 0, 2818083, 15, 0, 2818084, 15, 0, 2818085, 15, 0, 2818086, 15, 0, 2818087, 15, 0, 2818088, 15, 0, 2818089, 15, 0, 2818090, 15, 0, 2818091, 20, 0, 2818092, 20, 0, 2818093, 20, 0, 2818094, 20, 0, 2818095, 20, 0, 2818096, 20, 0, 2818097, 20, 0 )

[node name="Wall" parent="TileMap" index="0"]
tile_data = PoolIntArray( 1572898, 0, 0, 1572899, 0, 0, 1572900, 0, 0, 1572901, 0, 0, 1572902, 0, 0, 1572903, 0, 0, 1572904, 0, 0, 1572905, 0, 0, 1572906, 0, 0, 1572907, 0, 0, 1572908, 0, 0, 1572909, 0, 0, 1572910, 0, 0, 1572911, 0, 0, 1572912, 0, 0, 1572913, 0, 0, 1638434, 0, 0, 1638435, 0, 0, 1638436, 0, 0, 1638437, 0, 0, 1638438, 0, 0, 1638439, 0, 0, 1638440, 0, 0, 1638441, 0, 0, 1638442, 0, 0, 1638443, 0, 0, 1638444, 0, 0, 1638445, 0, 0, 1638446, 0, 0, 1638447, 0, 0, 1638448, 0, 0, 1638449, 0, 0, 1703970, 0, 0, 1703971, 0, 0, 1703972, 0, 0, 1703973, 0, 0, 1703974, 0, 0, 1703975, 0, 0, 1703976, 0, 0, 1703977, 0, 0, 1703978, 0, 0, 1703979, 0, 0, 1703980, 0, 0, 1703981, 0, 0, 1703982, 0, 0, 1703983, 0, 0, 1703984, 0, 0, 1703985, 0, 0, 1769506, 0, 0, 1769507, 0, 0, 1769508, 0, 0, 1769509, 0, 0, 1769510, 0, 0, 1769511, 0, 0, 1769512, 0, 0, 1769513, 0, 0, 1769514, 0, 0, 1769515, 0, 0, 1769516, 0, 0, 1769517, 0, 0, 1769518, 0, 0, 1769519, 0, 0, 1769520, 0, 0, 1769521, 0, 0, 1835042, 0, 0, 1835043, 0, 0, 1835044, 0, 0, 1835045, 0, 0, 1835046, 0, 0, 1835047, 0, 0, 1835048, 0, 0, 1835049, 0, 0, 1835050, 0, 0, 1835051, 0, 0, 1835052, 0, 0, 1835053, 0, 0, 1835054, 0, 0, 1835055, 0, 0, 1835056, 0, 0, 1835057, 0, 0, 1900578, 0, 0, 1900579, 0, 0, 1900580, 0, 0, 1900581, 0, 0, 1900582, 0, 0, 1900583, 0, 0, 1900584, 0, 0, 1900585, 0, 0, 1900586, 0, 0, 1900587, 0, 0, 1900588, 0, 0, 1900589, 0, 0, 1900590, 0, 0, 1900591, 0, 0, 1900592, 0, 0, 1900593, 0, 0, 1966114, 0, 0, 1966115, 0, 0, 1966116, 0, 0, 1966117, 0, 0, 1966118, 0, 0, 1966119, 0, 0, 1966120, 0, 0, 1966121, 0, 0, 1966122, 0, 0, 1966123, 0, 0, 1966124, 0, 0, 1966125, 0, 0, 1966126, 0, 0, 1966127, 0, 0, 1966128, 0, 0, 1966129, 0, 0, 2031650, 0, 0, 2031651, 0, 0, 2031652, 0, 0, 2031653, 0, 0, 2031654, 0, 0, 2031655, 0, 0, 2031656, 0, 0, 2031657, 0, 0, 2031658, 0, 0, 2031659, 0, 0, 2031660, 0, 0, 2031661, 0, 0, 2031662, 0, 0, 2031663, 0, 0, 2031664, 0, 0, 2031665, 0, 0, 2097186, 0, 0, 2097187, 0, 0, 2097188, 0, 0, 2097189, 0, 0, 2097190, 0, 0, 2097191, 0, 0, 2097192, 0, 0, 2097193, 0, 0, 2097194, 0, 0, 2097195, 0, 0, 2097196, 0, 0, 2097197, 0, 0, 2097198, 0, 0, 2097199, 0, 0, 2097200, 0, 0, 2097201, 0, 0, 2162722, 0, 0, 2162723, 0, 0, 2162724, 0, 0, 2162725, 0, 0, 2162726, 0, 0, 2162727, 0, 0, 2162728, 0, 0, 2162729, 0, 0, 2162730, 0, 0, 2162731, 0, 0, 2162732, 0, 0, 2162733, 0, 0, 2162734, 0, 0, 2162735, 0, 0, 2162736, 0, 0, 2162737, 0, 0, 2228263, 0, 0, 2228264, 0, 0, 2228265, 0, 0, 2228266, 0, 0, 2359292, 0, 0, 2359293, 0, 0, 2359294, 0, 0, 2359295, 0, 0, 2293760, 0, 0, 2293761, 0, 0, 2293762, 0, 0, 2293763, 0, 0, 2293764, 0, 0, 2293765, 0, 0, 2293766, 0, 0, 2293767, 0, 0, 2293768, 0, 0, 2293769, 0, 0, 2293770, 0, 0, 2293771, 0, 0, 2293772, 0, 0, 2293773, 0, 0, 2293774, 0, 0, 2293775, 0, 0, 2293776, 0, 0, 2293777, 0, 0, 2293778, 0, 0, 2293779, 0, 0, 2293780, 0, 0, 2293781, 0, 0, 2293782, 0, 0, 2293783, 0, 0, 2293784, 0, 0, 2293785, 0, 0, 2293786, 0, 0, 2293787, 0, 0, 2293788, 0, 0, 2293789, 0, 0, 2293790, 0, 0, 2293791, 0, 0, 2293792, 0, 0, 2293793, 0, 0, 2293794, 0, 0, 2293795, 0, 0, 2293796, 0, 0, 2293797, 0, 0, 2293798, 0, 0, 2293799, 0, 0, 2293800, 0, 0, 2293801, 0, 0, 2293802, 0, 0, 2424828, 0, 0, 2424829, 0, 0, 2424830, 0, 0, 2424831, 0, 0, 2359296, 0, 0, 2359297, 0, 0, 2359298, 0, 0, 2359299, 0, 0, 2359300, 0, 0, 2359301, 0, 0, 2359302, 0, 0, 2359303, 0, 0, 2359304, 0, 0, 2359305, 0, 0, 2359306, 0, 0, 2359307, 0, 0, 2359308, 0, 0, 2359309, 0, 0, 2359310, 0, 0, 2359311, 0, 0, 2359312, 0, 0, 2359313, 0, 0, 2359314, 0, 0, 2359315, 0, 0, 2359316, 0, 0, 2359317, 0, 0, 2359318, 0, 0, 2359319, 0, 0, 2359320, 0, 0, 2359321, 0, 0, 2359322, 0, 0, 2359323, 0, 0, 2359324, 0, 0, 2359325, 0, 0, 2359326, 0, 0, 2359327, 0, 0, 2359328, 0, 0, 2359329, 0, 0, 2359330, 0, 0, 2359331, 0, 0, 2359332, 0, 0, 2359333, 0, 0, 2359334, 0, 0, 2359335, 0, 0, 2359336, 0, 0, 2359337, 0, 0, 2359338, 0, 0, 2490365, 0, 0, 2490366, 0, 0, 2490367, 0, 0, 2424832, 0, 0, 2424833, 0, 0, 2424834, 0, 0, 2424835, 0, 0, 2424836, 0, 0, 2424837, 0, 0, 2424838, 0, 0, 2424839, 0, 0, 2424840, 0, 0, 2424841, 0, 0, 2424842, 0, 0, 2424843, 0, 0, 2424844, 0, 0, 2424845, 0, 0, 2424846, 0, 0, 2424847, 0, 0, 2424848, 0, 0, 2424849, 0, 0, 2424850, 0, 0, 2424851, 0, 0, 2424852, 0, 0, 2424853, 0, 0, 2424854, 0, 0, 2424855, 0, 0, 2424856, 0, 0, 2424857, 0, 0, 2424858, 0, 0, 2424859, 0, 0, 2424860, 0, 0, 2424861, 0, 0, 2424862, 0, 0, 2424863, 0, 0, 2424864, 0, 0, 2424865, 0, 0, 2424866, 0, 0, 2424867, 0, 0, 2424868, 0, 0, 2424869, 0, 0, 2424870, 0, 0, 2424871, 0, 0, 2424872, 0, 0, 2424873, 0, 0, 2424874, 0, 0, 2555902, 0, 0, 2555903, 0, 0, 2490368, 0, 0, 2490369, 0, 0, 2490370, 0, 0, 2490371, 0, 0, 2490372, 0, 0, 2490373, 0, 0, 2490374, 0, 0, 2490375, 0, 0, 2490376, 0, 0, 2490377, 0, 0, 2490378, 0, 0, 2490379, 0, 0, 2490380, 0, 0, 2490381, 0, 0, 2490382, 0, 0, 2490383, 0, 0, 2490384, 0, 0, 2490385, 0, 0, 2490386, 0, 0, 2490387, 0, 0, 2490388, 0, 0, 2490389, 0, 0, 2490390, 0, 0, 2490391, 0, 0, 2490392, 0, 0, 2490393, 0, 0, 2490394, 0, 0, 2490395, 0, 0, 2490396, 0, 0, 2490397, 0, 0, 2490398, 0, 0, 2490399, 0, 0, 2490400, 0, 0, 2490401, 0, 0, 2490402, 0, 0, 2490403, 0, 0, 2490404, 0, 0, 2490405, 0, 0, 2490406, 0, 0, 2490407, 0, 0, 2490408, 0, 0, 2490409, 0, 0, 2490410, 0, 0, 2621439, 0, 0, 2555904, 0, 0, 2555905, 0, 0, 2555906, 0, 0, 2555907, 0, 0, 2555908, 0, 0, 2555909, 0, 0, 2555910, 0, 0, 2555911, 0, 0, 2555912, 0, 0, 2555913, 0, 0, 2555914, 0, 0, 2555915, 0, 0, 2555916, 0, 0, 2555917, 0, 0, 2555918, 0, 0, 2555919, 0, 0, 2555920, 0, 0, 2555921, 0, 0, 2555922, 0, 0, 2555923, 0, 0, 2555924, 0, 0, 2555925, 0, 0, 2555926, 0, 0, 2555927, 0, 0, 2555928, 0, 0, 2555929, 0, 0, 2555930, 0, 0, 2555931, 0, 0, 2555932, 0, 0, 2555933, 0, 0, 2555934, 0, 0, 2555935, 0, 0, 2555936, 0, 0, 2555937, 0, 0, 2555938, 0, 0, 2555939, 0, 0, 2555940, 0, 0, 2555941, 0, 0, 2555942, 0, 0, 2555943, 0, 0, 2555944, 0, 0, 2555945, 0, 0, 2555946, 0, 0, 2621441, 0, 0, 2621442, 0, 0, 2621443, 0, 0, 2621444, 0, 0, 2621445, 0, 0, 2621446, 0, 0, 2621447, 0, 0, 2621448, 0, 0, 2621449, 0, 0, 2621450, 0, 0, 2621451, 0, 0, 2621452, 0, 0, 2621453, 0, 0, 2621454, 0, 0, 2621455, 0, 0, 2621456, 0, 0, 2621457, 0, 0, 2621458, 0, 0, 2621459, 0, 0, 2621460, 0, 0, 2621461, 0, 0, 2621462, 0, 0, 2621463, 0, 0, 2621464, 0, 0, 2621465, 0, 0, 2621466, 0, 0, 2621467, 0, 0, 2621468, 0, 0, 2621469, 0, 0, 2621470, 0, 0, 2621471, 0, 0, 2621472, 0, 0, 2621473, 0, 0, 2621474, 0, 0, 2621475, 0, 0, 2621476, 0, 0, 2621477, 0, 0, 2621478, 0, 0, 2621479, 0, 0, 2621480, 0, 0, 2621481, 0, 0, 2621482, 0, 0, 2686979, 0, 0, 2686980, 0, 0, 2686981, 0, 0, 2686982, 0, 0, 2686983, 0, 0, 2686984, 0, 0, 2686985, 0, 0, 2686986, 0, 0, 2686987, 0, 0, 2686988, 0, 0, 2686989, 0, 0, 2686990, 0, 0, 2686991, 0, 0, 2686992, 0, 0, 2686993, 0, 0, 2686994, 0, 0, 2686995, 0, 0, 2686996, 0, 0, 2686997, 0, 0, 2686998, 0, 0, 2686999, 0, 0, 2687000, 0, 0, 2687001, 0, 0, 2687002, 0, 0, 2687003, 0, 0, 2687004, 0, 0, 2687005, 0, 0, 2687006, 0, 0, 2687007, 0, 0, 2687008, 0, 0, 2687009, 0, 0, 2687010, 0, 0, 2687011, 0, 0, 2687012, 0, 0, 2687013, 0, 0, 2687014, 0, 0, 2687015, 0, 0, 2687016, 0, 0, 2687017, 0, 0, 2687018, 0, 0, 2752519, 0, 0, 2752520, 0, 0, 2752521, 0, 0, 2752522, 0, 0, 2752523, 0, 0, 2752524, 0, 0, 2752525, 0, 0, 2752526, 0, 0, 2752527, 0, 0, 2752528, 0, 0, 2752529, 0, 0, 2752530, 0, 0, 2752531, 0, 0, 2752532, 0, 0, 2752533, 0, 0, 2752534, 0, 0, 2752535, 0, 0, 2752536, 0, 0, 2752537, 0, 0, 2752538, 0, 0, 2752539, 0, 0, 2752540, 0, 0, 2752541, 0, 0, 2752542, 0, 0, 2752543, 0, 0, 2752544, 0, 0, 2752545, 0, 0, 2752546, 0, 0, 2752547, 0, 0, 2752548, 0, 0, 2752549, 0, 0, 2752550, 0, 0, 2752551, 0, 0, 2752552, 0, 0, 2752553, 0, 0, 2752554, 0, 0 )

[node name="Spikes" parent="TileMap" index="1"]
tile_data = PoolIntArray( 1179660, 2, 0, 1179661, 3, 0, 1245190, 2, 0, 1245191, 3, 0, 1245196, 2, 0, 1245197, 3, 0, 1310726, 2, 0, 1310727, 3, 0, 1310732, 2, 0, 1310733, 3, 0, 1376262, 2, 0, 1376263, 3, 0, 1376268, 2, 0, 1376269, 3, 0, 1441798, 2, 0, 1441799, 3, 0, 1572893, 1, 0, 1638430, 1, 0, 1703967, 1, 0, 1769504, 2, 0, 1835040, 2, 0, 1900576, 2, 0, 1966112, 2, 0, 2031648, 2, 0, 2097184, 2, 0, 2162696, 0, 0, 2162697, 0, 0, 2162698, 0, 0, 2162699, 0, 0, 2162700, 0, 0, 2162701, 0, 0, 2162702, 0, 0, 2162706, 0, 0, 2162707, 0, 0, 2162708, 0, 0, 2162709, 0, 0, 2162711, 0, 0, 2162712, 0, 0, 2162716, 0, 0, 2162717, 0, 0, 2162718, 0, 0, 2162719, 0, 0, 2162720, 0, 0 )

[node name="WallLamp1" parent="." instance=ExtResource( 9 )]
position = Vector2( 673.497, 2506.38 )

[node name="WallLamp2" parent="." instance=ExtResource( 9 )]
position = Vector2( 1378.41, 2506.38 )

[node name="WallLamp3" parent="." instance=ExtResource( 9 )]
position = Vector2( 1989.72, 2506.38 )

[node name="Mirza" parent="." instance=ExtResource( 10 )]
position = Vector2( -54.2226, -60.4552 )
critical_y_down = 5000.0
camera_bounds = [ -120, -3500, 8500, 5000 ]

[node name="Cannon" parent="." instance=ExtResource( 11 )]
position = Vector2( 226.648, 2168.49 )

[node name="dialogue_node1" parent="." instance=ExtResource( 12 )]
position = Vector2( -59.8326, -131.18 )
actor_mirza = NodePath("../Mirza")
dialogue_lines = [ "actor_mirza", "Так, сверху что-то нехорошо щёлкнуло...", "end_dialogue" ]

[node name="dialogue_node2" parent="." instance=ExtResource( 12 )]
position = Vector2( 1053.79, 2345.29 )
actor_mirza = NodePath("../Mirza")
dialogue_lines = [ "actor_mirza", "Ну кто вообще хранит валуны на своём воздушном судне?!", "end_dialogue" ]

[node name="dialogue_node3" parent="." instance=ExtResource( 12 )]
position = Vector2( 2405.65, 2501.35 )
scale = Vector2( 1, 3 )
actor_mirza = NodePath("../Mirza")
dialogue_lines = [ "actor_mirza", "Я уже рядом с оружейным отсеком.", "Устрою им 16 декабря.", "end_dialogue" ]

[node name="Button1" parent="." instance=ExtResource( 13 )]
position = Vector2( 1704.27, 2104.04 )
enable_timer = true

[node name="Button2" parent="." instance=ExtResource( 13 )]
position = Vector2( 1048.73, 1579.61 )
enable_timer = true

[node name="BoulderSwitcher1" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 2029.83, 1896.99 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoulderSwitcher1"]
shape = SubResource( 1 )

[node name="BoulderSwitcher2" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 1341.44, 1585.33 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoulderSwitcher2"]
shape = SubResource( 1 )

[node name="Boulder" parent="." instance=ExtResource( 14 )]
position = Vector2( 109.665, -1102.44 )

[node name="KoumissBottle1" parent="." instance=ExtResource( 15 )]
position = Vector2( 1441.25, 2153.25 )

[node name="KoumissBottle2" parent="." instance=ExtResource( 15 )]
position = Vector2( 1867.88, 868.027 )

[node name="KoumissBottle3" parent="." instance=ExtResource( 15 )]
position = Vector2( -224.388, 2340.06 )

[node name="ToothDwarf" parent="." instance=ExtResource( 16 )]
modulate = Color( 0.737255, 0.737255, 0.737255, 1 )
position = Vector2( 1791.92, 2654.11 )
move_to = Vector2( 0, -300 )

[node name="HipptyHop1" parent="." instance=ExtResource( 17 )]
position = Vector2( 2176.56, 2671.42 )

[node name="HipptyHop2" parent="." instance=ExtResource( 17 )]
position = Vector2( 104.96, 2533.67 )
[connection signal="dialogue_finished" from="dialogue_node1" to="." method="_on_dialogue1_finished"]
[connection signal="button_pressed" from="Button1" to="." method="_on_button1_pressed"]
[connection signal="button_pressed" from="Button2" to="." method="_on_button2_pressed"]
[connection signal="body_entered" from="BoulderSwitcher1" to="." method="_on_BoulderSwitcher_body_entered"]
[connection signal="body_entered" from="BoulderSwitcher2" to="." method="_on_BoulderSwitcher_body_entered"]
[connection signal="body_entered" from="Boulder/Area2D" to="." method="_on_Boulder_body_entered"]
[connection signal="collected" from="KoumissBottle1" to="." method="_on_koumiss_collected"]
[connection signal="collected" from="KoumissBottle2" to="." method="_on_koumiss_collected"]
[connection signal="collected" from="KoumissBottle3" to="." method="_on_koumiss_collected"]
[connection signal="killed" from="ToothDwarf" to="." method="_on_enemy_killed"]
[connection signal="killed" from="HipptyHop1" to="." method="_on_enemy_killed"]
[connection signal="killed" from="HipptyHop2" to="." method="_on_enemy_killed"]

[editable path="BackgroundThirdAct"]

[editable path="TileMap"]

[editable path="Boulder"]
